force-app/main/default/objects/AVO_Process_State_Post_Actions__c/AVO_Process_State_Post_Actions__c.object-meta.xml
<CustomObject>
    <label>Process State Transition Post Action</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Post Action ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process State Transition Post Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>