force-app/main/default/objects/AVO_Process_State_Post_Actions__c/fields/Avo_Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Avo_Action_Name__c</fullName>
    <formula>text(Avo_Event_Type__c) + text(Avo_Fee_Type__c) + text(Avo_Inspection_Type__c) + text(Avo_Review_Type__c) + text(Avo_Submission_Type__c) + text(Avo_Task_Type__c) + text(Milestone_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Name</label>
    <type>Text</type>
</CustomField>