force-app/main/default/objects/AVO_Process_State_Post_Actions__c/fields/Avo_Active__c.field-meta.xml
<CustomField>
    <fullName>Avo_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>