force-app/main/default/objects/AVO_Process_State_Post_Actions__c/fields/Avo_Check_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Avo_Check_Duplicate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Check Duplicate</label>
    <type>Checkbox</type>
</CustomField>