force-app/main/default/objects/AVO_Process_State_Post_Actions__c/fields/Avo_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Avo_Date_Field__c</fullName>
    <inlineHelpText>name of a date field from the Permit or Application object</inlineHelpText>
    <label>Date Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>