force-app/main/default/objects/AVO_Process_State_Post_Actions__c/fields/Avo_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Avo_Email_Template__c</fullName>
    <label>Email Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permit Pay Fees Due</fullName>
            </value>
            <value>
                <fullName>Unit Manager Review Email</fullName>
            </value>
            <value>
                <fullName>Park Supervisor Review Email</fullName>
            </value>
            <value>
                <fullName>Risk Review Email</fullName>
            </value>
            <value>
                <fullName>Completeness Review Email</fullName>
            </value>
            <value>
                <fullName>Land Review Email</fullName>
            </value>
            <value>
                <fullName>Expedited Completeness Review Email</fullName>
            </value>
            <value>
                <fullName>Application Received - Incomplete</fullName>
            </value>
            <value>
                <fullName>Application Received - Complete</fullName>
            </value>
            <value>
                <fullName>Permit Issued/Notice to Proceed</fullName>
            </value>
            <value>
                <fullName>Permit Created</fullName>
            </value>
            <value>
                <fullName>Application Pay Fees Due</fullName>
            </value>
            <value>
                <fullName>Revision Request Acknowledgment Notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>