force-app/main/default/objects/AVO_Process_State_Post_Actions__c/fields/Avo_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Avo_Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Avo_Event_Type</valueSetName>
    </valueSet>
</CustomField>