force-app/main/default/objects/AVO_Process_State_Post_Actions__c/fields/Avo_Fee_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Avo_Fee_Quantity__c</fullName>
    <defaultValue>&apos;1&apos;</defaultValue>
    <inlineHelpText>Overwrite the default value by providing the name of a data field from the Permit or Application object</inlineHelpText>
    <label>Fee Quantity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>