force-app/main/default/objects/AVO_Process_State_Post_Actions__c/fields/Avo_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Avo_Field_Value__c</fullName>
    <label>Field Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>