force-app/main/default/objects/AVO_Process_State_Post_Actions__c/fields/Avo_Formula_Condition__c.field-meta.xml
<CustomField>
    <fullName>Avo_Formula_Condition__c</fullName>
    <inlineHelpText>for example: Avo_Electrical_Type_of_Applicable_Work__c = &apos;Solar&apos;</inlineHelpText>
    <label>Formula Condition</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>