force-app/main/default/objects/AVO_Process_State_Post_Actions__c/fields/Avo_Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Avo_Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>