force-app/main/default/objects/AVO_Process_State_Post_Actions__c/fields/avo_Legacy_Description__c.field-meta.xml
<CustomField>
    <fullName>avo_Legacy_Description__c</fullName>
    <label>Legacy Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>