force-app/main/default/objects/AVO_Process_State_Post_Actions__c/fields/Avo_Notes__c.field-meta.xml
<CustomField>
    <fullName>Avo_Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>