force-app/main/default/objects/AVO_Process_State_Post_Actions__c/fields/Avo_Process__c.field-meta.xml
<CustomField>
    <fullName>Avo_Process__c</fullName>
    <formula>Avo_Process_State_Transition__r.Avo_Process__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process</label>
    <type>Text</type>
</CustomField>