force-app/main/default/objects/AVO_Process_State_Post_Actions__c/fields/Avo_Queue_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Avo_Queue_Assignment__c</fullName>
    <label>Queue Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>Complaints</fullName>
            </value>
            <value>
                <fullName>Review Queue</fullName>
            </value>
            <value>
                <fullName>Submitted Applications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>