force-app/main/default/objects/AVO_Process_State_Post_Actions__c/fields/Avo_State_Transition__c.field-meta.xml
<CustomField>
    <fullName>Avo_State_Transition__c</fullName>
    <formula>Avo_Process_State_Transition__r.Avo_Auto_State_Transition__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Transition</label>
    <type>Text</type>
</CustomField>