force-app/main/default/objects/AVO_Process_State_Post_Actions__c/fields/Avo_Update_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Avo_Update_Field_Type__c</fullName>
    <label>Update Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boolean</fullName>
                <default>true</default>
                <label>Boolean</label>
            </value>
            <value>
                <fullName>String</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>