force-app/main/default/objects/AVO_Process_State_Post_Actions__c/fields/Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Type__c</fullName>
    <label>Milestone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Review Milestone for Permit and Building</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>