force-app/main/default/objects/AVO_Process_State_Post_Actions__c/recordTypes/Avo_Event_Action.recordType-meta.xml
<RecordType>
    <fullName>Avo_Event_Action</fullName>
    <active>true</active>
    <label>Event Action</label>
</RecordType>