force-app/main/default/objects/AVO_Process_State_Post_Actions__c/recordTypes/Avo_Fee_Action.recordType-meta.xml
<RecordType>
    <fullName>Avo_Fee_Action</fullName>
    <active>true</active>
    <label>Fee Action</label>
</RecordType>