force-app/main/default/objects/AVO_Process_State_Post_Actions__c/recordTypes/Avo_Inspection_Action.recordType-meta.xml
<RecordType>
    <fullName>Avo_Inspection_Action</fullName>
    <active>true</active>
    <label>Inspection Action</label>
</RecordType>