force-app/main/default/objects/AVO_Process_State_Post_Actions__c/recordTypes/Avo_Review_Action.recordType-meta.xml
<RecordType>
    <fullName>Avo_Review_Action</fullName>
    <active>true</active>
    <label>Review Action</label>
</RecordType>