force-app/main/default/objects/AVO_Process_State_Post_Actions__c/recordTypes/Avo_Submission_Action.recordType-meta.xml
<RecordType>
    <fullName>Avo_Submission_Action</fullName>
    <active>true</active>
    <label>Submission Action</label>
</RecordType>