force-app/main/default/objects/AVO_Process_State_Post_Actions__c/recordTypes/Avo_Task_Action.recordType-meta.xml
<RecordType>
    <fullName>Avo_Task_Action</fullName>
    <active>true</active>
    <label>Task Action</label>
</RecordType>