force-app/main/default/objects/AVO_Process_State_Post_Actions__c/recordTypes/Email_Action.recordType-meta.xml
<RecordType>
    <fullName>Email_Action</fullName>
    <active>true</active>
    <label>Email Action</label>
</RecordType>