force-app/main/default/objects/AVO_Process_State_Post_Actions__c/recordTypes/Milestone_Action.recordType-meta.xml
<RecordType>
    <fullName>Milestone_Action</fullName>
    <active>true</active>
    <label>Milestone Action</label>
</RecordType>