force-app/main/default/objects/AVO_Process_State_Post_Actions__c/recordTypes/Update_Instance_Action.recordType-meta.xml
<RecordType>
    <fullName>Update_Instance_Action</fullName>
    <active>true</active>
    <label>Update Instance Action</label>
</RecordType>